# SolanaPilot

./: .env.example  .eslintrc.json  .gitignore  .vscodeignore  API_SETUP.md  Anchor.toml  CHANGELOG.md  LICENSE  README.md  REGISTRY_DEPLOYMENT.md  SETUP_COMPLETE.md  SETUP_DEPLOYMENT_ENV.md  SolanaPilot_Context_Document.md  TESTING.md  fix_workflow.py  package-lock.json  package.json  registry-keypair.json  tsconfig.json
.github/workflows/: deploy-registry.yml
ci/: Dockerfile
idl/: solanapilot_registry.json
programs/registry/: Cargo.toml
programs/registry/src/: lib.rs
src/: aiClient.ts  chatPanel.ts  contextBuilder.ts  diagnostics.ts  extension.ts  fileWriter.ts  frontendGenerator.ts  pdaGenerator.ts  programGenerator.ts  rateLimiter.ts  registryClient.ts  secretStorage.ts  sidebarProvider.ts  systemPrompt.ts  terminalRunner.ts
src/webview/: chat.html  chat.js
templates/: anchor-program.ts  anchor-toml.ts  frontend-react.ts
web-explorer/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
web-explorer/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  trace
web-explorer/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
web-explorer/.next/server/: app-paths-manifest.json  server-reference-manifest.json
web-explorer/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.module.css  page.tsx
web-explorer/components/: error-boundary.tsx
web-explorer/lib/: mock-data.ts  mockRegistry.ts  solana.ts  solanapilot_registry.json
(+35 files in other folders)
